fix: adjust tooltip positioning for improved visibility

--- a/browser-extension/chrome/styles/content.css
+++ b/browser-extension/chrome/styles/content.css
@@ -101,11 +101,11 @@
 }
 
 #invade-tooltip[data-position='bottom']::before {
-  top: calc(100% + 4px);
+  top: calc(100%);
 }
 
 #invade-tooltip[data-position='bottom']::after {
-  top: calc(100% + 5px);
+  top: calc(100%);
 }
 
 #invade-tooltip[data-position='top']::before,
@@ -114,11 +114,11 @@
 }
 
 #invade-tooltip[data-position='top']::before {
-  bottom: calc(100% + 4px);
+  bottom: calc(100%);
 }
 
 #invade-tooltip[data-position='top']::after {
-  bottom: calc(100% + 5px);
+  bottom: calc(100%);
 }
 
 .invade-tooltip__masthead {
